dynamically displayed test feature of product

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 
 
 
-NEXT_PUBLIC_API_BASE_URL=http://localhost:5055/api
+NEXT_PUBLIC_API_BASE_URL=https://everlia-backend-api.onrender.com/api
+
 
 NEXT_PUBLIC_STRIPE_KEY=your_stripe_api_key
 
